--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,6 @@ name: Build Android APK
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
   workflow_dispatch:
 
 jobs:
@@ -12,24 +10,33 @@ jobs:
     runs-on: windows-latest
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
     
-    - name: Setup .NET
+    - name: Setup .NET 8
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
         
-    - name: Install MAUI workload
-      run: dotnet workload install maui-android
-      
-    - name: Restore dependencies
+    - name: Install MAUI workloads
+      run: |
+        dotnet workload install maui
+        dotnet workload restore
+        
+    - name: Restore NuGet packages
       run: dotnet restore
       
-    - name: Build APK
-      run: dotnet publish FoodApp/FoodApp.csproj -f net8.0-android -c Release -p:AndroidPackageFormat=apk
+    - name: Build Android APK
+      run: >
+        dotnet publish 
+        -f net8.0-android 
+        -c Release 
+        -p:AndroidPackageFormat=apk
+        --no-restore
       
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: android-apk
-        path: FoodApp/bin/Release/net8.0-android/publish/*.apk
+        name: FoodApp-APK
+        path: bin/Release/net8.0-android/publish/*.apk
+        if-no-files-found: error
